ensured sandwich nav text is aligned correctly on 404 page

--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,8 @@ nav.sandwich {
   overflow-y: scroll;
 
   transition: left 0.25s ease;
+
+  text-align: left;
 }
 
 nav.sandwich > .close {
